# obs-zoom-connector

./: CMakeLists.txt
.github/workflows/: build-project.yaml  push.yaml
src/: plugin-main.cpp
zoom-sdk/h/: auth_service_interface.h
